--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "mathjs": "^11.8.2"
   },
   "description": ""
 }
